--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@ timezone:
 # jekyll-seo-tag settings › https://github.com/jekyll/jekyll-seo-tag/blob/master/docs/usage.md
 # ↓ --------------------------
 
-title: Chirpy # the main title
+title: Venus Chhantel
 
 tagline: A text-focused Jekyll theme # it will display as the sub-title
 
@@ -23,26 +23,26 @@ description: >- # used by seo meta and the atom feed
 
 # Fill in the protocol & hostname for your site.
 # e.g. 'https://username.github.io', note that it does not end with a '/'.
-url: ""
+url: "https://VenusChhantel.github.io"
 
 github:
-  username: github_username # change to your github username
+  username: VenusChhantel # change to your github username
 
 twitter:
-  username: twitter_username # change to your twitter username
+  username: venuschhantel # change to your twitter username
 
 social:
   # Change to your full name.
   # It will be displayed as the default author of the posts and the copyright owner in the Footer
-  name: your_full_name
-  email: example@domain.com # change to your email address
+  name: VenusChhantel
+  email: venus.chhantel.777@gmail.com # change to your email address
   links:
     # The first element serves as the copyright owner's link
-    - https://twitter.com/username # change to your twitter homepage
-    - https://github.com/username # change to your github homepage
+    - https://twitter.com/venuschhantel # change to your twitter homepage
+    - https://github.com/VenusChhantel # change to your github homepage
     # Uncomment below to add more social links
     # - https://www.facebook.com/username
-    # - https://www.linkedin.com/in/username
+    - https://www.linkedin.com/in/venus-chhantel-366172262/
 
 google_site_verification: # fill in to your verification string
 
