--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ timezone:
 
 title: Venus Chhantel
 
-tagline: A text-focused Jekyll theme # it will display as the sub-title
+tagline: I do malware stuffs # it will display as the sub-title
 
 description: >- # used by seo meta and the atom feed
   A minimal, responsive and feature-rich Jekyll theme for technical writing.
@@ -73,7 +73,7 @@ theme_mode: # [light|dark]
 img_cdn:
 
 # the avatar on sidebar, support local or CORS resources
-avatar:
+avatar: img/Profile.png
 
 # boolean type, the global switch for TOC in posts.
 toc: true
